apps/loki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-gossip-ring
spec:
  publishNotReadyAddresses: true
  clusterIP: None
  selector:
    app.kubernetes.io/name: loki
    app.kubernetes.io/part-of: memberlist
  ports:
    - name: tcp
      port: 7946
      protocol: TCP
      targetPort: gossip
---
apiVersion: v1
kind: Service
metadata:
  name: loki-metrics
  labels:
    app.kubernetes.io/name: loki
    app.kubernetes.io/instance: loki
    app.kubernetes.io/component: metrics
spec:
  selector:
    app.kubernetes.io/name: loki
  ports:
    - name: http-metrics
      port: 3100
      targetPort: http
      protocol: TCP
