apps/loki/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki-httproute
spec:
  parentRefs:
  - name: default-https-gateway
    namespace: istio-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - loki.home.alden.ai
  rules:
  - backendRefs:
    - name: loki-gateway
      port: 80
    # matches:
    # - path:
    #     type: PathPrefix
    #     value: /
      group: ''
      kind: Service
      weight: 1
