apps/loki/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: loki-virtualservice
spec:
  hosts:
    - loki.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: loki-gateway.loki.svc.cluster.local
            port:
              number: 80
